# BroccoliEngine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  BroccoliEngine.slnx  BroccoliEngine.vcxproj  BroccoliEngine.vcxproj.filters  BroccoliStem.props  CMakeLists.txt  Log.txt  ObjectManager.cpp  ObjectManager.h  README.md  RunDebugSandbox.wsb  VS-DxLib-Learn-01.slnx  VS-DxLib-Learn-01.vcxproj  VS-DxLib-Learn-01.vcxproj.bak  VS-DxLib-Learn-01.vcxproj.filters  build.bat  setup-vcpkg.md  vcpkg.json
Engine/: BroccoliEngine.targets  BroccoliEngine.vcxproj  BroccoliEngine.vcxproj.filters  BroccoliStem.props  Build.md  ThirdParty.md  coding.md  main.cpp  setup-vcpkg.md  status.md  vcpkg.json
Engine/Bootstrap/: Bootstrap.cpp
Engine/Components/: BaseComponent.cpp  BaseComponent.h  CameraComponent.cpp  CameraComponent.h  SceneComponent.cpp  SceneComponent.h  SpriteComponent.cpp  SpriteComponent.h
Engine/Core/: Application.cpp  Application.h  GameObject.cpp  GameObject.h  UpdateableObject.cpp  UpdateableObject.h
Engine/Editor/: ActorRegistry.h  EditorController.cpp  EditorMode.cpp  EditorMode.h  EditorPawn.cpp  EditorPawn.h  EditorSelectPointComponent.cpp  EditorSelectPointComponent.h  EditorUI.cpp  EditorUI.h  LevelSerializer.cpp  LevelSerializer.h
Engine/EngineCore/: file.md
Engine/EngineSide/: GridLine.cpp  GridLine.h  (+2 more)
EngineSide/: GridLine.cpp  GridLine.h
Game/: GameMain.cpp  GameMain.h
Launcher/: Bootstrap.cpp  CMakeLists.txt  Entry.cpp  Launcher.vcxproj  Launcher.vcxproj.filters  Log.txt  imgui.ini
Launcher/LevelStarter/: LevelStarterWidget.cpp  LevelStarterWidget.h
Launcher/NetworkTest/: NetworkTestBreakableActor.cpp  NetworkTestBreakableActor.h  NetworkTestForceFieldActor.cpp  NetworkTestForceFieldActor.h  NetworkTestGameMode.cpp  NetworkTestGameMode.h  NetworkTestLevel.BLevel  NetworkTestPawn.cpp  NetworkTestPawn.h  NetworkTestUI.cpp  NetworkTestUI.h
Launcher/Resources/: BasicGameplay.BLevel  LevelStarter.BLevel  Network1.BLevel  Network2.BLevel  NetworkTestLevel2.BLevel  SceneTest.BLevel  WidgetTest.BLevel
Launcher/SampleScene01/: MainMenu.h  SamplePawn01.cpp  SampleScene01.cpp
Launcher/SceneTest/: AttachmentRuleTestActor.cpp  AttachmentRuleTestActor.h  AttachmentRuleTestComponent.cpp  AttachmentRuleTestComponent.h
Launcher/Source/: Entry.cpp
Launcher/Source/BasicGameplay/: BasicGameplayGameMode.cpp  BasicGameplayGameMode.h  BasicGameplayPawn.cpp  BasicGameplayPawn.h  CollisionTestActors.cpp  CollisionTestActors.h
Launcher/Source/Common/: LauncherPlayerController.cpp  LauncherPlayerController.h
Launcher/Source/LevelStarter/: LevelStarterGameMode.cpp  LevelStarterGameMode.h  LevelStarterWidget.cpp  LevelStarterWidget.h
Launcher/Source/NetworkTest/: NetworkTestBreakableActor.cpp  NetworkTestBreakableActor.h  NetworkTestForceFieldActor.cpp  NetworkTestForceFieldActor.h  NetworkTestGameMode.cpp  NetworkTestGameMode.h  NetworkTestPawn.cpp  NetworkTestPawn.h  NetworkTestRepComponent.cpp  NetworkTestRepComponent.h  NetworkTestUI.cpp  NetworkTestUI.h
Launcher/Source/SceneTest/: AttachmentRuleTestActor.cpp  AttachmentRuleTestActor.h  SceneLifecycleActor.cpp  SceneLifecycleActor.h  SceneTestGameMode.cpp  SceneTestGameMode.h
Launcher/Source/WidgetTest/: CanvasTestActor.cpp  CanvasTestActor.h  WidgetTestGameMode.cpp  WidgetTestGameMode.h  WidgetTestPawn.cpp  WidgetTestPawn.h  WidgetTestUIMain.cpp  WidgetTestUIMain.h
Launcher/WidgetTest/: WidgetTestGameMode.cpp  WidgetTestGameMode.h  WidgetTestPawn.cpp  WidgetTestPawn.h  WidgetTestUIMain.cpp
images/: Ground.csv  catrase.csv  otamesi.csv  zero_matrix_48x40.csv
src/: Application.cpp  Application.h  Component.cpp  Component.h  Enemy.cpp  Enemy.h  GameObject.h  OBaseObject.cpp  OBaseObject.h  OGameObject.cpp  OGameObject.h  OUpdateableObject.cpp  OUpdateableObject.h  ResourceManager.cpp  ResourceManager.h  SampleA.cpp  SampleA.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h  main.cpp
(+293 files in other folders)
